<resources>
    <string name="app_name">Unnamed</string>
    <string name="action_settings">Settings</string>
    <string name="algebra">Algebra</string>
    <string name="calculator">Calculator</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="title_activity_algebra">AlgebraActivity</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_exit">ExitActivity</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plusminus">±</string>
    <string name="equals">=</string>
    <string name="divide">÷</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="clear">C</string>
    <string name="clear_entry">CE</string>
    <string name="memory_plus">M+</string>
    <string name="memory_minus">M-</string>
    <string name="memory_clear">MC</string>
    <string name="memory_overwrite">X➤M</string>
    <string name="memory_recall">MR</string>
    <string name="exponent">xⁿ</string>
    <string name="square">x²</string>
    <string name="sqrt">√</string>
    <string name="nth_root">ⁿ√</string>
    <string name="arithmetic_geometric_mean">AGM</string>
    <string name="naturallog">ln</string>
    <string name="decimalpoint">.</string>
    <string name="backspace">⌫</string>
    <string name="no_operator">Input an operator(+,-,*,÷).</string>
    <string name="no_numbers">Input numbers to calculate.</string>
    <string name="divide_by_zero">Cannot divide by zero.</string>
    <string name="negative_sqrt">Cannot get a real solution from a square root of a negative number.</string>
    <string name="power_too_high">cannot compute using a power that is extremely high.</string>
</resources>
