<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".calculator.CalculatorActivity"
    tools:showIn="@layout/activity_calculator">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="@dimen/calculator_text_large"
        android:id="@+id/calculatornumbers"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/zero"
        android:layout_below="@+id/two"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:id="@+id/one"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/four"
        android:layout_alignStart="@+id/four"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:id="@+id/two"
        android:layout_below="@+id/four"
        android:layout_alignLeft="@+id/zero"
        android:layout_alignStart="@+id/zero"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:id="@+id/three"
        android:layout_alignTop="@+id/two"
        android:layout_toRightOf="@+id/two"
        android:layout_toEndOf="@+id/two"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:id="@+id/four"
        android:layout_above="@+id/one"
        android:layout_alignLeft="@+id/seven"
        android:layout_alignStart="@+id/seven"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:id="@+id/five"
        android:layout_below="@+id/seven"
        android:layout_alignLeft="@+id/two"
        android:layout_alignStart="@+id/two"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:id="@+id/six"
        android:layout_above="@+id/three"
        android:layout_alignLeft="@+id/three"
        android:layout_alignStart="@+id/three"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:id="@+id/seven"
        android:layout_above="@+id/four"
        android:layout_toLeftOf="@+id/five"
        android:layout_toStartOf="@+id/five"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:id="@+id/eight"
        android:layout_alignTop="@+id/seven"
        android:layout_toRightOf="@+id/seven"
        android:layout_toEndOf="@+id/seven"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:id="@+id/nine"
        android:layout_above="@+id/five"
        android:layout_toRightOf="@+id/five"
        android:layout_toEndOf="@+id/five"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/plusminus"
        android:id="@+id/plusminus"
        android:layout_below="@+id/two"
        android:layout_alignLeft="@+id/one"
        android:layout_alignStart="@+id/one"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:id="@+id/equals"
        android:layout_below="@+id/two"
        android:layout_toRightOf="@+id/zero"
        android:layout_toEndOf="@+id/zero"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:id="@+id/divide"
        android:onClick="onClick"
        android:layout_below="@+id/six"
        android:layout_toRightOf="@+id/three"
        android:layout_toEndOf="@+id/three" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:id="@+id/multiply"
        android:onClick="onClick"
        android:layout_above="@+id/six"
        android:layout_toRightOf="@+id/six"
        android:layout_toEndOf="@+id/six" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/sub"
        android:onClick="onClick"
        android:layout_above="@+id/divide"
        android:layout_toRightOf="@+id/three"
        android:layout_toEndOf="@+id/three" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:onClick="onClick"
        android:layout_alignTop="@+id/clear"
        android:layout_toRightOf="@+id/nine"
        android:layout_toEndOf="@+id/nine" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clear"
        android:onClick="onClick"
        android:layout_above="@+id/eight"
        android:layout_toRightOf="@+id/eight"
        android:layout_toEndOf="@+id/eight" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/exponent"
        android:id="@+id/exponent"
        android:layout_alignTop="@id/plusminus"
        android:layout_toLeftOf="@id/plusminus"
        android:layout_toStartOf="@id/plusminus"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/square"
        android:id="@+id/square"
        android:layout_alignTop="@id/one"
        android:layout_toLeftOf="@id/one"
        android:layout_toStartOf="@id/one"
        android:onClick="onClick"/>

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/sqrt"
        android:id="@+id/sqrt"
        android:layout_alignTop="@id/four"
        android:layout_toLeftOf="@id/four"
        android:layout_toStartOf="@id/four"
        android:onClick="onClick"/>

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/nth_root"
        android:id="@+id/nthroot"
        android:layout_alignTop="@id/seven"
        android:layout_toLeftOf="@id/seven"
        android:layout_toStartOf="@id/seven"
        android:onClick="onClick"/>



    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/decimalpoint"
        android:id="@+id/decimalpoint"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_below="@+id/divide"
        android:layout_alignLeft="@+id/divide"
        android:layout_alignStart="@+id/divide" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/backspace"
        android:id="@+id/delete"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_alignTop="@+id/clear_entry"
        android:layout_alignLeft="@+id/seven"
        android:layout_alignStart="@+id/seven" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/naturallog"
        android:id="@+id/naturallog"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_toLeftOf="@id/delete"
        android:layout_toStartOf="@id/delete"
        android:layout_alignTop="@id/delete"/>

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/clear_entry"
        android:id="@+id/clear_entry"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_alignTop="@+id/clear"
        android:layout_toLeftOf="@+id/nine"
        android:layout_toStartOf="@+id/nine" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/memory_plus"
        android:id="@+id/memoryplus"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_above="@+id/delete"
        android:layout_toLeftOf="@+id/delete"
        android:layout_toStartOf="@+id/delete" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/memory_minus"
        android:id="@+id/memoryminus"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_above="@+id/delete"
        android:layout_alignLeft="@+id/delete"
        android:layout_alignStart="@+id/delete" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/memory_clear"
        android:id="@+id/memoryclear"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_above="@+id/clear"
        android:layout_toLeftOf="@+id/clear"
        android:layout_toStartOf="@+id/clear" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/memory_overwrite"
        android:id="@+id/memoryoverwrite"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_above="@+id/add"
        android:layout_toLeftOf="@+id/add"
        android:layout_toStartOf="@+id/add" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/memory_recall"
        android:id="@+id/memoryrecall"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_alignTop="@+id/memoryoverwrite"
        android:layout_toRightOf="@+id/clear"
        android:layout_toEndOf="@+id/clear" />

    <Button
        android:layout_width="@dimen/calculator_button_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/arithmetic_geometric_mean"
        android:id="@+id/agm"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_above="@+id/memoryplus"
        android:layout_alignLeft="@+id/memoryplus"
        android:layout_alignStart="@+id/memoryplus" />

</RelativeLayout>
