<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="inei.algebrasolver.StartupActivity"
    tools:showIn="@layout/activity_startup">



  <!--  <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/algebra"
        android:id="@+id/algebra"
        android:layout_marginTop="49dp"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="startAlgebraActivity"
        android:visibility="invisible"
        />
        -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:id="@+id/calculator"
        android:textAllCaps="false"
        android:onClick="startCalculatorActivity"
        android:layout_above="@+id/options"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:id="@+id/options"
        android:textAllCaps="false"
        android:onClick="startOptionsActivity"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/calculator"
        android:layout_alignStart="@+id/calculator" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exit"
        android:textAllCaps="false"
        android:onClick="startExitActivity"
        android:layout_below="@+id/options"
        android:layout_alignLeft="@+id/calculator"
        android:layout_alignStart="@+id/calculator"
        android:layout_marginTop="117dp" />

</RelativeLayout>
